Tst/Tests/Pos/Basic/MaxQSize.p
main machine Foo {
    maxqueue 10;
    start state foo { }
}
