Tst/Tests/Neg/UndeclaredIds/UndeclaredAction.p
event EFoo;

main model machine Foo {
    start state S1 {
        entry {
        }
        on EFoo do bar;
    }   
}
